--- a/sass/shop.scss
+++ b/sass/shop.scss
@@ -164,6 +164,7 @@ body {
   background-color: $primary-dark;
   color: $white;
   padding: 50px 0 80px 0;
+  padding-top: 50px;
 
   .sp {
     &-heading {
